2018-12-07  Vladimir Svoboda  <vladimir.svoboda@hipperos.com>

	* config.gcc (arm*-*-hipperos*): Add support for HIPPEROS on ARM
	(arm*-*-hipperos*).
	* config/arm/t-hipperos: New file.

2018-12-07  Vladimir Svoboda  <vladimir.svoboda@hipperos.com>

	* config.gcc (*-*-hipperos*): Add (*-*-hipperos*) configuration.
	* config/hipperos-spec.h: New file.
	* config/hipperos.h: New file.
	* config/hipperos.opt: New file.

2018-12-06  Release Manager

	* GCC 7.4.0 released.

2018-11-28  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/79351
	* tree-ssa-sccvn.c (vn_reference_lookup_3): For assignments from
	empty CONSTRUCTORs ensure the store is at a constant position.

2018-11-26  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline
	2018-08-22  Iain Sandoe  <iain@sandoe.co.uk>

	PR bootstrap/81033
	PR target/81733
	PR target/52795
	* gcc/dwarf2out.c (FUNC_SECOND_SECT_LABEL): New.
	(dwarf2out_switch_text_section): Generate a local label for the second
	function sub-section and apply it as the second FDE start label.
	* gcc/final.c (final_scan_insn_1): Emit second FDE label after the second
	sub-section start.

2018-11-26  Iain Sandoe  <iain@sandoe.co.uk>

	2018-08-15  Iain Sandoe  <iain@sandoe.co.uk>
 
	* config/darwin.c
	(darwin_function_switched_text_sections): Delete.
	* gcc/config/darwin.h
	(TARGET_ASM_FUNCTION_SWITCHED_TEXT_SECTIONS): Likewise.

2018-11-26  Andreas Krebbel  <krebbel@linux.ibm.com>

	Backport from mainline
	2018-11-20  Andreas Krebbel  <krebbel@linux.ibm.com>

	* config/s390/s390.md ("clztidi2"): Swap the RTX's written to the
	DImode parts of the target operand.

2018-11-26  Andreas Krebbel  <krebbel@linux.ibm.com>

	Backport from mainline
	2018-11-26  Andreas Krebbel  <krebbel@linux.ibm.com>

	* doc/invoke.texi: Document z14/arch12 -march option.

2018-10-19  Richard Biener  <rguenther@suse.de>

	PR middle-end/87645
	Backport from mainline
	2018-07-12  Richard Biener  <rguenther@suse.de>
