@@ -1,5 +1,11 @@
 2018-12-07  Vladimir Svoboda  <vladimir.svoboda@hipperos.com>
 
+	* config.gcc (aarch64*-*-hipperos*): Add support for HIPPEROS on AARCH64
+	(aarch64*-*-hipperos*).
+	* config/aarch64/aarch64-hipperos.h: New file.
+
+2018-12-07  Vladimir Svoboda  <vladimir.svoboda@hipperos.com>
+
 	* config.gcc (arm*-*-hipperos*): Add support for HIPPEROS on ARM
 	(arm*-*-hipperos*).
 	* config/arm/t-hipperos: New file.
